Fixed navbar issue with scrolling
- When clicking on browse, the page navbar would move slightly, when you clicked on a different page. This happened because the scrollbar was not present on the navbar. Thus scrollbar has now been implemented on every page.

--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,8 @@
   position: fixed;
   z-index: -100;
 }
+
+html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
+}
